@@ -29,7 +29,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'clearCacheOnLoad' => 1,
 	'lockType' => '',
 	'author_company' => 'B·A·D GmbH',
-	'version' => '0.2.4',
+	'version' => '0.3.0',
 	'constraints' => array(
 		'depends' => array(
 			'dam' => ''
