@@ -5,7 +5,8 @@ CREATE TABLE tx_dam (
     tx_jhedamextender_usage int(11) DEFAULT '0' NOT NULL,
     tx_jhedamextender_lowlevel_selection varchar(255) DEFAULT '' NOT NULL,
     tx_jhedamextender_path tinytext,
-    tx_jhedamextender_order int(11) DEFAULT '0' NOT NULL
+    tx_jhedamextender_order int(11) DEFAULT '0' NOT NULL,
+	tx_jhedamextender_doctype text,
 );
 
 
@@ -29,4 +30,35 @@ CREATE TABLE tx_jhedamextender_usage (
 	
 	PRIMARY KEY (uid),
 	KEY parent (pid)
+);
+
+
+#
+# Table structure for table 'tx_jhedamextender_doctype'
+#
+CREATE TABLE tx_jhedamextender_doctype (
+	uid int(11) NOT NULL auto_increment,
+	pid int(11) DEFAULT '0' NOT NULL,
+	tstamp int(11) DEFAULT '0' NOT NULL,
+	crdate int(11) DEFAULT '0' NOT NULL,
+	cruser_id int(11) DEFAULT '0' NOT NULL,
+	t3ver_oid int(11) DEFAULT '0' NOT NULL,
+	t3ver_id int(11) DEFAULT '0' NOT NULL,
+	t3ver_wsid int(11) DEFAULT '0' NOT NULL,
+	t3ver_label varchar(30) DEFAULT '' NOT NULL,
+	t3ver_state tinyint(4) DEFAULT '0' NOT NULL,
+	t3ver_stage tinyint(4) DEFAULT '0' NOT NULL,
+	t3ver_count int(11) DEFAULT '0' NOT NULL,
+	t3ver_tstamp int(11) DEFAULT '0' NOT NULL,
+	t3ver_move_id int(11) DEFAULT '0' NOT NULL,
+	t3_origuid int(11) DEFAULT '0' NOT NULL,
+	sorting int(10) DEFAULT '0' NOT NULL,
+	deleted tinyint(4) DEFAULT '0' NOT NULL,
+	hidden tinyint(4) DEFAULT '0' NOT NULL,
+	name varchar(255) DEFAULT '' NOT NULL,
+	desciption text,
+	
+	PRIMARY KEY (uid),
+	KEY parent (pid),
+	KEY t3ver_oid (t3ver_oid,t3ver_wsid)
 );
