@@ -14,6 +14,8 @@
             <label index="pi3_plus_wiz_description">Adds a navigation menu for several kinds of special uasges</label>
             <label index="pi4_title">DAM file list</label>
             <label index="pi4_plus_wiz_description">DAM File List (per Category)</label>
+			<label index="pi5_title">DAM document list</label>
+            <label index="pi5_plus_wiz_description">DAM Document List (per type)</label>
 
             <label index="back">Back</label>
             <label index="bilder">Pictures</label>
@@ -74,6 +76,8 @@
             <label index="pi3_plus_wiz_description">Gibt ein Navigationsmenü für verschiedene spezielle Verwendungen aus.</label>
             <label index="pi4_title">DAM Dateiliste</label>
             <label index="pi4_plus_wiz_description">DAM Dateiliste je Kategorie</label>
+			<label index="pi5_title">DAM Dokumentliste</label>
+            <label index="pi5_plus_wiz_description">DAM Dokumentliste nach Typ</label>
 
             <label index="back">Zurück</label>
             <label index="bilder">Bilder</label>
