@@ -19,6 +19,11 @@
 			<label index="tt_content.list_type_pi2">DAM category menue</label>
 			<label index="tt_content.list_type_pi3">DAM special usage menue</label>
 			<label index="tt_content.list_type_pi4">DAM file list</label>
+			<label index="tt_content.list_type_pi5">DAM document list</label>
+			<label index="tx_dam.tx_jhedamextender_doctype">Document type</label>
+			<label index="tx_jhedamextender_doctype">Document type</label>
+			<label index="tx_jhedamextender_doctype.name">Name</label>
+			<label index="tx_jhedamextender_doctype.desciption">Description</label>
 		</languageKey>
 		<languageKey index="de" type="array">
 			<label index="tx_dam.tx_jhedamextender_usage">Verwendung für</label>
@@ -34,6 +39,11 @@
 			<label index="tt_content.list_type_pi2">DAM Kategoriemenü</label>
 			<label index="tt_content.list_type_pi3">DAM Navigationsmenü für spezielle Verwendungen</label>
 			<label index="tt_content.list_type_pi4">DAM Dateiliste</label>
+			<label index="tt_content.list_type_pi5">DAM Dokumentenliste</label>
+			<label index="tx_dam.tx_jhedamextender_doctype">Dokumententyp</label>
+			<label index="tx_jhedamextender_doctype">Dokumententyp</label>
+			<label index="tx_jhedamextender_doctype.name">Bezeichnung</label>
+			<label index="tx_jhedamextender_doctype.desciption">Beschreibung</label>
 		</languageKey>
 	</data>
 </T3locallang>
